# rust-linz-wolframs-universe

./: Cargo.toml
docs/: slides.html
src/: config.rs  main.rs
src/automata/: count_state_handler.rs  mod.rs  pattern_state_handler.rs  wolframs_universe.rs
src/ui/: cell.rs  control_state.rs  mod.rs  ui_state.rs
